--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ textarea{margin:0; padding:0;resize:none; overflow:auto; outline:none;}
 .pro_list li{height:32px;width:100%;margin-bottom:5px;}
 .pro_list span{display:block;height:20px;line-height:20px;font-size:12px;color:#9c9c9c;}
 .pro_list .progress{height:10px;width:158px;border-radius:5px;}
-.pro_list .progress span{display:block;height:100%;width:50%;}
+.pro_list .progress span{display:block;height:100%;width:0px;}
 
 
 /*联系方式*/
